# api/api.go
@@ -14,7 +14,15 @@ import (
 
 func NewApi(r *gin.Engine, cfg *config.Config, storage storage.StorageI, logger logger.LoggerI) {
 
+	// @securityDefinitions.apikey ApiKeyAuth
+	// @in header
+	// @name Authorization
+
 	handler := handler.NewHandler(cfg, storage, logger)
+
+	r.Use(customCORSMiddleware())
+
+	v1 := r.Group("/v1")
 
 	r.POST("/category", handler.CreateCategory)
 	r.GET("/category/:id", handler.GetByIdCategory)
@@ -29,13 +37,29 @@ func NewApi(r *gin.Engine, cfg *config.Config, storage storage.StorageI, logger 
 	r.PATCH("/product/:id", handler.PatchProduct)
 	r.DELETE("/product/:id", handler.DeleteProduct)
 
-	r.POST("/market", handler.CreateMarket)
-	r.GET("/market/:id", handler.GetByIdMarket)
-	r.GET("/market", handler.GetListMarket)
-	r.PUT("/market/:id", handler.UpdateMarket)
-	r.PATCH("/market/:id", handler.PatchMarket)
-	r.DELETE("/market/:id", handler.DeleteMarket)
+	v1.Use(handler.AuthMiddleware())
+	v1.POST("/market", handler.CreateMarket)
+	v1.GET("/market/:id", handler.GetByIdMarket)
+	v1.GET("/market", handler.GetListMarket)
+	v1.PUT("/market/:id", handler.UpdateMarket)
+	v1.PATCH("/market/:id", handler.PatchMarket)
+	v1.DELETE("/market/:id", handler.DeleteMarket)
 
 	url := ginSwagger.URL("swagger/doc.json") // The url pointing to API definition
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
+}
+
+func customCORSMiddleware() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		c.Header("Access-Control-Allow-Origin", "*")
+		c.Header("Access-Control-Allow-Methods", "POST, GET, PUT, PATCH, DELETE, OPTIONS, HEAD")
+		c.Header("Access-Control-Allow-Headers", "Platform-Id, Content-Type, Accesp-Encoding, Authorization, Cache-Control")
+
+		if c.Request.Method == "OPTIONS" {
+			c.AbortWithStatus(204)
+			return
+		}
+
+		c.Next()
+	}
 }
